trying another version with pip

--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:2.7
 RUN echo exit 0 > /usr/sbin/policy-rc.d
 WORKDIR /usr/src/app
-RUN pip install mysql-connection-python
+RUN pip install mysql-connector-python-rf
 COPY . .
 RUN apt-get update
 RUN DEBIAN_FRONTEND=noninteractive apt-get -y install mysql-client
